@@ -15,7 +15,22 @@
         <awssdk.version>2.21.10</awssdk.version>
     </properties>
     <build>
+
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>22</release>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.vector</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -85,10 +100,31 @@
             <version>2.8.1</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>io.nosqlbench</groupId>
+            <artifactId>vectordata</artifactId>
+            <version>0.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.7.6</version>
+        </dependency>
+        <dependency>
+            <groupId>io.nosqlbench</groupId>
+            <artifactId>nbvectors</artifactId>
+            <version>0.1.5</version>
+        </dependency>
+
+
     </dependencies>
     <profiles>
         <profile>
             <id>jdk11</id>
+            <properties>
+                <maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>11</maven.compiler.target>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -129,6 +165,10 @@
         </profile>
         <profile>
             <id>jdk20</id>
+            <properties>
+              <maven.compiler.release>20</maven.compiler.release>
+
+            </properties>
             <dependencies>
                 <dependency>
                     <groupId>io.github.jbellis</groupId>
@@ -212,9 +252,12 @@
         </profile>
         <profile>
             <id>jdk22</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+          <activation>
+            <activeByDefault>true</activeByDefault>
+          </activation>
+            <properties>
+              <maven.compiler.target>22</maven.compiler.target>
+            </properties>
             <dependencies>
                 <dependency>
                     <groupId>io.github.jbellis</groupId>
@@ -301,6 +344,34 @@
                             </execution>
                         </executions>
                     </plugin>
+                  <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.7.1</version>
+                    <executions>
+                      <execution>
+                        <phase>package</phase>
+                        <goals>
+                          <goal>single</goal>
+                        </goals>
+                      </execution>
+                    </executions>
+                    <configuration>
+                      <archive>
+                        <manifest>
+                          <addClasspath>true</addClasspath>
+                          <mainClass>io.github.jbellis.jvector.example.testrig.commands.TestRig</mainClass>
+                        </manifest>
+                      </archive>
+                      <descriptorRefs>
+                        <!--                  <ref>assembly.xml</ref>-->
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                        <!--            <descriptorRef>assembly</descriptorRef>-->
+                      </descriptorRefs>
+                    </configuration>
+                  </plugin>
+
+
                 </plugins>
             </build>
         </profile>
